snapshots/syntax/library/functions/file/filedatetime/filedatetime_udt_field.snap
---
source: src/syntax/library/functions/file/filedatetime.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: info
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: ModifiedDate
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: FileDateTime
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: filePath
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
